# MalScanWorker

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  prompts
.amazonq/prompts/: openspec-apply.md  openspec-archive.md  openspec-proposal.md
.github/workflows/: backend.yml  frontend.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_add_job_result.py
backend/src/malscan/: __init__.py  config.py  main.py  queue.py  storage.py
backend/src/malscan/api/: routes.py
backend/src/malscan/db/: __init__.py  engine.py  session.py
backend/src/malscan/models/: __init__.py  base.py  file.py  job.py
backend/src/malscan/schemas/: __init__.py  requests.py
backend/tests/: conftest.py  test_api.py  test_models.py
frontend/: .eslintrc.cjs  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  vite-env.d.ts
frontend/src/api/: client.ts
frontend/src/pages/: JobStatusPage.tsx  ReportPage.tsx  (+1 more)
k8s/: configmap.yaml  namespace.yaml  secrets.yaml.example
k8s/api/: deployment.yaml
k8s/minio/: deployment.yaml  pv.yaml  pvc.yaml
k8s/rabbitmq/: deployment.yaml  pv.yaml  pvc.yaml
k8s/worker/: deployment.yaml
k8s/yara-rules/: configmap.yaml
openspec/: project.md
worker/: Dockerfile  README.md  pyproject.toml
worker/rules/: crypto_miners.yar  eicar.yar  network.yar  placeholder.yar  suspicious.yar  webshells.yar
worker/tests/: conftest.py  test_pipeline.py  test_stages.py
(+51 files in other folders)
