[tool.poetry]
name = "malscan-api"
version = "0.1.0"
description = "MalScan API Server"
authors = ["MalScan Team"]
readme = "README.md"
packages = [{include = "malscan", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.0"}
asyncpg = "^0.29.0"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
python-multipart = ">=0.0.7"
aio-pika = "^9.3.0"
minio = "^7.2.0"
prometheus-fastapi-instrumentator = "^6.1.0"
structlog = "^23.2.0"
alembic = "^1.13.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
httpx = "^0.25.0"
ruff = "^0.1.0"
mypy = "^1.7.0"
black = "^23.11.0"
isort = "^5.12.0"

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
